# vinobuzz

./: .gitignore  CLAUDE.md  PLAN.md  requirement.md
task1-wine-recommendation/: .env.example  AUDIT.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
task1-wine-recommendation/app/: main.py  settings.py
task1-wine-recommendation/app/api/routers/: sommelier.py
task1-wine-recommendation/app/biz/agent/sommelier/: mode.py
task1-wine-recommendation/app/biz/agent/sommelier/agents/: coordinator.py  explorer.py  filter_builder.py  generator.py  preference_planner.py  query_refinement.py
task1-wine-recommendation/app/biz/agent/sommelier/schemas/: preference_plan.py  recommendation.py  wine_filter.py
task1-wine-recommendation/app/biz/agent/sommelier/utils/: citation.py
task1-wine-recommendation/app/biz/tools/: web_search_tool.py  wine_db_tool.py
task1-wine-recommendation/app/config/: sommelier.yaml
task1-wine-recommendation/app/core/: agent_config.py  chat_interface.py  models.py  streaming.py
task1-wine-recommendation/app/data/: wine_knowledge.py  wines.py
task1-wine-recommendation/app/prompts/: coordinator.md  explorer.md  filter_builder.md  generator.md  preference_planner.md  query_refinement.md
task1-wine-recommendation/diagrams/: workflow.excalidraw
task1-wine-recommendation/postman/: VinoBuzz_Sommelier.postman_collection.json
task1-wine-recommendation/tests/: test_agent_config.py  test_chat_interface.py  test_citation.py  test_mode.py  test_schemas.py  test_sommelier_api.py  test_web_search_tool.py  test_wine_db_tool.py
(+7 files in other folders)
